{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Touch",
            "id": "879babe1-67e2-41cc-8f46-e8ca52342f5b",
            "actions": [
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "9ec0bd73-6470-46cc-958f-3ee7ed6f3fdd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryContact",
                    "type": "Button",
                    "id": "bd5f219c-34ec-40a6-b62a-3a2596c6c737",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9834e4c2-d3b4-4336-b5a1-50b45f049d54",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96fd12de-d9da-490a-a87c-7a3163b611d4",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}